# Assigment2-P1

./: CMakeLists.txt  README.md  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_urdf-ros2/share/ament_index/resource_index/package_run_dependencies/: robot_urdf-ros2
install/robot_urdf-ros2/share/robot_urdf-ros2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_urdf-ros2/share/robot_urdf-ros2/cmake/: robot_urdf-ros2Config.cmake
install/robot_urdf/lib/robot_urdf/: robot_mover.py
install/robot_urdf/share/robot_urdf/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_urdf/share/robot_urdf/cmake/: robot_urdfConfig.cmake
launch/: assignment1.launch
scripts/: action_client.py  action_client_node.py  service_node.py
